assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Cantarell&family=Caveat&display=swap');

body {
    overflow-x: hidden;
    font-family: 'Cantarell', sans-serif;
    color: #1e7e34;
}

.title-headings {
    text-align: center;
    text-decoration: underline;
    font-family: "Caveat", sans-serif;
}

.title-headings-2 {
    text-align: center;
    text-decoration: underline;
    font-family: "Caveat", sans-serif;
    width: 100%;
}

.box-margin {
    margin: 5rem 0rem;
}


/* ------------------------- Navigation ------------------------- */
.navbar {
    text-transform: uppercase;
    font-weight: 600;
    font-size: 0.9rem;
    letter-spacing: .1rem;
    background: rgba(0, 0, 0, 0.6);
}

.navbar-brand img {
    height: 5rem;
}

.navbar-nav li {
    padding-right: 0.2rem;
}

.navbar-dark .navbar-nav .nav-link {
    color: #fff;
    padding-top: 0.5rem;
}

.navbar-dark .navbar-nav .nav-link.active,
.navbar-dark .navbar-nav .nav-link:hover {
    color: #1e7e34;
}

/* ------------------------- Landing Page ------------------------- */
.home-inner {
    background-image: url("../images/heroimage.jpg");
}

.caption {
    width: 100%;
    max-width: 100%;
    position: absolute;
    top: 45%;
    z-index: 1;
    color: #fff;
    text-transform: uppercase;
}

.caption h1 {
    font-size: 3.8rem;
    font-weight: 700;
    letter-spacing: 0.3rem;
    text-shadow: 0.1rem 0.1rem 0.8rem black;
    padding-bottom: 1rem;
}

.caption h3 {
    font-size: 2rem;
    text-shadow: 5px 5px 5px black;
    padding-bottom: 1.5rem;
}

.btn-lg {
    border-width: medium;
    border-radius: 0;
    padding: 0.5rem 1rem;
    font-size: 1rem;
}

/* ------------------------- Cigar Globe ------------------------- */

div#map {
    min-height: 360px;
    padding: 0;
    margin: 0;
}

.box-border {
    border: 2px solid black;
}

.globe-list {
    font-family: "Cantarell", sans-serif;
    font-weight: bold;
    text-decoration: underline;
}

ol {
    display: table-cell;
    text-align: center;
    vertical-align: middle;
    width: 195px;
    height: 205px;
    margin: 0 auto;
    padding: 25px;
}

ol #list-2 {
    padding: 25px;
}

ol #list-3 {
    padding: 25px;
    overflow: hidden;
}

/* ------------------------- Cigar Journey ------------------------- */
.journey-text {
    text-align: center;
}

.journey-img {
    width: 20em;
    height: 20em;
    position: relative;
    border-radius: 50%;
    display: inline-block;
}

/* ------------------------- Cigar Talk Section ------------------------- */
.btn-text-color {
    color: #fff;
    background-color: #1e7e34;
    border-color: #99c93c;
}

.btn-no {
   color: #fff; 
}

.letter-nav {
    text-align: center;
}

.letter {
    margin: 10px 0;
}

.definition {
    text-align: center;
}

/* ------------------------- Cigar Quiz Section ------------------------- */
.grid {
    width: 600px;
    height: 500px;
    margin: 0 auto;
    background-color: #fff;
    padding: 10px 50px 50px 50px;
    border: 2px solid #1e7e34;    
}
 
#score {
    color: #1e7e34;
    text-align: center;
    font-size: 30px;
}
 
.grid #question {
    font-family: "monospace";
    font-size: 30px;
    color: #1e7e34;
}
 
.buttons {
    margin-top: 30px;
    text-align: center;
}

.quiz-text {
    text-align: center;
}
 
#btn0, #btn1, #btn2 {
    background-color: #1e7e34;
    width: 250px;
    font-size: 20px;
    color: #fff;
    border: 1px solid #99c93c;
    margin: 10px auto;
    padding: 10px 10px;
    display: block;
}
 
#btn0:hover, #btn1:hover, #btn2:hover {
    cursor: pointer;
    background-color: #99c93c;
}
 
#btn0:focus, #btn1:focus, #btn2:focus {
    outline: 0;
}
 
#progress {
    color: #1e7e34;
    font-size: 18px;
}
/* ------------------------- Contact Section ------------------------- */
.contact-form {
    margin: 100px auto;
    color: #fff;
    background-color: rgb(52, 58, 64);
    max-width: 400px;
    position: relative;
    padding: 30px 30px 30px 30px;
}

.form-image {
    background-image: url("../images/contact-image.jpg");
    background-size: cover;
    background-position: center;
    height: 700px;
}
    
.text-input {
    background: white;
    color: #1e7e34;
    width: 100%;
    height: 25px;
    margin: 5px 0 20px 0;
    border: solid 1px #1e7e34;
    border-radius: 2px;
}
  
.text-input:hover {
    border-color: #bbda7b;
}

.submit-button {
    margin-top: 20px;
    border-radius: 2px;
    padding: 15px 32px 15px 32px;
    text-align: center;
    font-size: 100%;
    background-color: #fff;
    color: #1e7e34;
    display: block;
}
  
.submit-button:hover {
    background-color: #1e7e34;
    color:  #bbda7b;
}  

/* ------------------------- Footer ------------------------- */
.footer-style {
    background-color: rgb(52, 58, 64);
    text-align: center;
}

hr {
    width: 25%;
    margin-left: auto;
    margin-right: auto;
    background-color: #1e7e34;
}

.footer-img {
    text-align: center;
    height: 3rem;
    margin: 1rem 0;
}

.foot-icon {
    font-size: 30px;
    margin: 1rem 1rem;
}

a {
    color: #1e7e34;
}
  
/* ------------------------- Extra Bootstrap Column Padding ------------------------- */
[class*="col-"] {
  padding: 1rem;
}

/* ------------------------- Bootstrap Mobile Gutter Fix ------------------------- */


/* ------------------------- Fix for Fixed Navbar jumping on scroll ------------------------- */
.fixed-top  {
 -webkit-backface-visibility: hidden;
}

/* ------------------------- Fixed Landing Page Section ------------------------- */
.landing {
  position: relative;
  width: 100%;
  height: 100vh;
  display: table;
  z-index: -1;
}

.home-wrap {
  clip: rect(0, auto, auto, 0);
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

.home-inner {
  position: fixed;
  display: table;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-size: cover;
  background-position: center center;
  -webkit-transform: translateZ(0);
          transform: translateZ(0);
  will-change: transform;
}

/* ------------------------- iOS Fixed Background Image ------------------------- */
.fixed-background {
  position: relative;
  width: 100%;
}

.fixed-wrap {
  clip: rect(0, auto, auto, 0);
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: -999!important;
}

.fixed {
  position: fixed;
  display: block;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-size: cover;
  background-position: center center;
  -webkit-transform: translateZ(0);
          transform: translateZ(0);
  will-change: transform;
}

